--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Chrome Copy Jira</title>
 </head>
 <body>
+    <div id="issue-content"><a id="key-val">UIA-123456</a><h1 id="summary-val">Test jira copy message</h1></div>
     <script type="module" src="/src/main.js"></script>
 </body>
 </html>
