--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <div id="is-dev"></div>
     <div id="issue-content"><a id="key-val">UIA-123456</a><h1 id="summary-val">Test jira copy message</h1></div>
+    <span class="shorten" id="fixVersions-field" resolved="">Release 21.4</span>
     <script type="module" src="/src/dev.js"></script>
 </body>
 </html>
